argocd/infrastructure/external/proxmox.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-svc
  namespace: external
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8006
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-svc
  namespace: external
subsets:
  - addresses:
      - ip: 192.168.88.31
    ports:
      - port: 8006
