argocd/infrastructure/external/proxmox-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxmox-internal-route
  namespace: external
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway-internal
    namespace: default
    sectionName: https
  hostnames: ["pve.internal.lazydogs.work"]
  rules:
  - backendRefs:
      - group: ''	
        kind: Service
        name: proxmox-svc
        port: 8006
        weight: 1
    matches:
    filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          set: 
            - name: "X-Forwarded-Proto"
              value: "https"
            - name: "X-Forwarded-Host"
              value: "pve.internal.lazydogs.work"
            - name: "X-Forwarded-Port"
              value: "443"
      - path:
          type: PathPrefix
          value: /
